# aircraft-maintenance-reserve-model

./: .env.example  .gitignore  CHANGELOG.md  README.md  Run Aircraft Reserve Dashboard.command  pyproject.toml
.github/workflows/: test.yml
dashboard/static/: app.js  dashboard-data.js  dashboard-data.json  demo-payload.json  index.html  styles.css
dashboard/v2/: app.js  dashboard-data.js  dashboard-data.json  index.html  styles.css
docs/: DEMO_WORKFLOW.md  README.md  V2_ANALYSIS_CONTRACT.md  V2_CONTRACT_CASHFLOW_CONTRACT.md  V2_DASHBOARD_CONTRACT.md  V2_IMPLEMENTATION_PLAN.md  V2_IMPLEMENTATION_STATUS.md  V2_SCENARIO_BUILDER_CONTRACT.md  V2_SENSITIVITY_CONTRACT.md  V2_SETTLEMENT_CONTRACT.md  V2_TRANSITION_CONTRACT.md  V2_UTILIZATION_CONTRACT.md  V2_VALUATION_CONTRACT.md  app.js  dashboard-data.js  dashboard-data.json  index.html  styles.css
docs/v2/: app.js  dashboard-data.js  dashboard-data.json  index.html  styles.css
scripts/: build_dashboard_payload.py  build_demo_regression_baseline.py  build_v2_dashboard_payload.py  run_case.py  run_dashboard_api.py
src/aircraft_cashflow/: __init__.py  __main__.py  analysis.py  api.py  audit.py  balances.py  case_questions.py  config.py  contracts.py  dates.py  (+16 more)
tests/: test_analysis.py  test_balances.py  test_config.py  test_contracts.py  test_dashboard_service.py  test_dates.py  test_events.py  test_inflows.py  test_lifecycle.py  test_lifecycle_utilization.py  test_llm_analysis.py  test_models.py  test_sensitivity.py  test_settlement.py  test_transitions.py  test_utilization.py  test_v2_dashboard.py  test_valuation.py
(+6 files in other folders)
