[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aircraft-maintenance-cashflow"
version = "1.0.0"
description = "Deterministic aircraft maintenance reserve cash-flow engine and dashboard"
readme = "README.md"
authors = [{ name = "Fei Wang" }]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
aircraft-cashflow = "aircraft_cashflow.__main__:main"
aircraft-cashflow-api = "aircraft_cashflow.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aircraft_cashflow = ["demo_regression_baseline.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
